# Alchemist

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  demo.ps1
.github/workflows/: ci.yml  publish.yml
examples/: app_config.toml  complex_api_response.json  ecommerce_product.json  heterogeneous_array.json  k8s_deployment.yaml  map_test.json  nested_data.json  sample.json  simple_config.json
scripts/: install.sh
src/: ast.rs  cli.rs  error.rs  formats.rs  main.rs  parser.rs  reporter.rs  utils.rs
src/generators/: mod.rs  python.rs  rust.rs  typescript.rs  zod.rs
