[package]
name = "alchemist"
version = "1.0.0"
edition = "2021"
authors = ["Fabio Tempera"]
description = "A blazingly fast CLI tool to convert JSON/YAML/TOML to Rust, TypeScript, Zod, and Python"
license = "MIT"
repository = "https://github.com/Ft2801/Alchemist"
homepage = "https://github.com/Ft2801/Alchemist"
keywords = ["codegen", "json", "cli", "typescript", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
owo-colors = { version = "4.0", features = ["supports-colors"] }
toml = "0.9.11"
clap_complete = "4.5.65"

[dev-dependencies]
pretty_assertions = "1.4"
